discussion/kv_engine/159992/159992_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Minimise includes in mock_cookie.h

Remove unnecessary includes from mock_cookie.h - some are entirely
unnecessary, others can be replaced with more specific headers or
forward declarations.

Change-Id: Ic8dcec52269ea50d1aa15c866f5a64f927e48b36

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2021-08-24 15:15:45.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-08-24 15:25:41.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38900/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-master\kv_engine\programs\engine_testapp\mock_cookie.h(135): error C3646: "getParentPort": unknown override specifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38900/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11565/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/programs/engine_testapp/mock_cookie.h:135:5: error: unknown type name "in_port_t"; did you mean "intptr_t"? [clang-diagnostic-error]
    in_port_t getParentPort() const {
    ^~~~~~~~~
    intptr_t
/usr/include/stdint.h:97:19: note: "intptr_t" declared here
typedef long int                intptr_t;
                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/programs/engine_testapp/mock_cookie.h:171:5: error: unknown type name "in_port_t"; did you mean "intptr_t"? [clang-diagnostic-error]
    in_port_t parent_port{666};
    ^~~~~~~~~
    intptr_t
/usr/include/stdint.h:97:19: note: "intptr_t" declared here
typedef long int                intptr_t;
                                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11565/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/programs/engine_testapp/mock_cookie.h:135:5:
error: unknown type name "in_port_t"; did you mean "intptr_t"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11565/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33159/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/programs/engine_testapp/mock_cookie.h:135:5:
error: unknown type name "in_port_t"; did you mean "intptr_t"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33159/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13391/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/21312/ : FAILURE

Compile error at [2021-08-24T15:25:10.855Z] ../kv_engine/programs/engine_testapp/mock_cookie.h:135:5:
error: unknown type name "in_port_t"; did you mean "intptr_t"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/21312/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1217/ : FAILURE

Compile error at [2021-08-24T15:23:23.530Z] ../kv_engine/programs/engine_testapp/mock_cookie.h:135:5:
error: ?in_port_t? does not name a type; did you mean ?intptr_t??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1217/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1207/ : FAILURE

Compile error at [2021-08-24T15:23:44.965Z] ../kv_engine/programs/engine_testapp/mock_cookie.h:135:5:
error: unknown type name "in_port_t"; did you mean "intptr_t"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1207/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/13174/ : FAILURE

Compile error at [2021-08-24T15:24:19.757Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/programs/engine_testapp/mock_cookie.h:135:5:
error: ?in_port_t? does not name a type; did you mean ?intptr_t??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/13174/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13772/ : FAILURE

Compile error at [2021-08-24T15:24:24.239Z] ../kv_engine/programs/engine_testapp/mock_cookie.h:135:5:
error: unknown type name "in_port_t"; did you mean "intptr_t"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13772/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/12302/ : FAILURE

Compile error at [2021-08-24T15:22:17.028Z] ../kv_engine/engines/ep/tests/module_tests/magma_bucket_tests.cc:86:27:
error: member access into incomplete type "SynchronousEPEngine"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/12302/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/10344/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
